--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^2.6.2"
   },
   "dependencies": {
+    "postcss-cssstats": "^1.0.0",
     "postcss-scss": "^1.0.2",
     "stylelint": "^8.3.1",
     "stylelint-config-recommended": "^2.0.0",
